<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.classm8.ui.register.RegisterViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/sub_color">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/uw_madison"
                android:textSize="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <EditText
                android:id="@+id/input_email_register"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_box_stroke"
                android:ellipsize="end"
                android:hint="@string/input_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@={viewModel.inputEmailStateFlow}"
                app:layout_constraintDimensionRatio="W,1:8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintWidth_percent=".8" />


            <EditText
                android:id="@+id/input_pass_register"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_box_stroke"
                android:ellipsize="end"
                android:hint="@string/input_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:minEms="8"
                android:minLines="1"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@={viewModel.inputPasswordStateFlow}"
                app:layout_constraintDimensionRatio="W,1:8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_email_register"
                app:layout_constraintWidth_percent=".8" />


            <EditText
                android:id="@+id/input_pass_register_ok"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_box_stroke"
                android:ellipsize="end"
                android:hint="@string/input_check_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minEms="8"
                android:minLines="1"
                android:paddingStart="16sp"
                android:paddingEnd="16sp"
                android:text="@={viewModel.inputPasswordOkStateFlow}"
                app:layout_constraintDimensionRatio="W,1:8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_pass_register"
                app:layout_constraintWidth_percent=".8"
                app:onEditorAction="@{() -> viewModel.register()}" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_action_lorange"
                android:onClick="@{()->viewModel.register()}"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintDimensionRatio="W,1:8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_pass_register_ok"
                app:layout_constraintWidth_percent=".8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>